fix text overflow in repeating group table summary

--- a/src/layout/RepeatingGroup/Summary2/RepeatingGroupTableSummary/RepeatingGroupTableSummary.module.css
+++ b/src/layout/RepeatingGroup/Summary2/RepeatingGroupTableSummary/RepeatingGroupTableSummary.module.css
@@ -73,19 +73,9 @@
 }
 
 .cellValue {
-  white-space: nowrap;
+  word-break: break-word;
 }
 
 .cellValidationMessage {
   margin-top: var(--ds-size-1);
-  white-space: nowrap;
-}
-
-.cellValidationMessage * {
-  white-space: inherit;
-}
-
-.mobileTable .cellValue,
-.mobileTable .cellValidationMessage {
-  white-space: normal;
 }
